--- a/examples/automl_example/api_example/advanced_example/explainability/explainability.ipynb
+++ b/examples/automl_example/api_example/advanced_example/explainability/explainability.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "from fedot.core.pipelines.pipeline_builder import PipelineBuilder\n",
     "from fedot_ind.core.optimizer.IndustrialEvoOptimizer import IndustrialEvoOptimizer\n",
-    "from fedot_ind.api.main import FedotIndustrial as FI\n",
+    "from fedot_ind.api.main import Framework as FI\n",
     "from fedot_ind.tools.explain.explain import PointExplainer\n",
     "\n",
     "ml_task = 'classification'\n",
