--- a/examples/real_world_examples/industrial_examples/energy_monitoring/ts_regression/building_energy_consumption_steam.ipynb
+++ b/examples/real_world_examples/industrial_examples/energy_monitoring/ts_regression/building_energy_consumption_steam.ipynb
@@ -44,7 +44,7 @@
     "from fedot_ind.api.utils.path_lib import PROJECT_PATH\n",
     "from fedot.core.pipelines.pipeline_builder import PipelineBuilder\n",
     "from fedot_ind.tools.loader import DataLoader\n",
-    "from fedot_ind.api.main import FedotIndustrial"
+    "from fedot_ind.api.main import Framework"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "def evaluate_loop(api_params, finetune: bool = False):\n",
-    "    industrial = FedotIndustrial(**api_params)\n",
+    "    industrial = Framework(**api_params)\n",
     "    if finetune:\n",
     "        industrial.finetune(train_data)\n",
     "    else:\n",
@@ -97,7 +97,7 @@
     }
    },
    "source": [
-    "Now we must download the dataset. It could be done by using `DataReader` class that implemented as attribute of `FedotIndustrial` class. This class firstly tries to read the data from local project folder `data_path` and then if it is not possible, it downloads the data from the UCR/UEA archive. The data will be saved in the `data` folder."
+    "Now we must download the dataset. It could be done by using `DataReader` class that implemented as attribute of `Framework` class. This class firstly tries to read the data from local project folder `data_path` and then if it is not possible, it downloads the data from the UCR/UEA archive. The data will be saved in the `data` folder."
    ]
   },
   {
@@ -246,7 +246,7 @@
    "source": [
     "Next steps are quite straightforward. We need to fit the model and then predict the values for the test data just like for any other model in sklearn.\n",
     "\n",
-    "At the `fit` stage FedotIndustrial will transform initial time series data into features dataframe and will train regression model."
+    "At the `fit` stage Framework will transform initial time series data into features dataframe and will train regression model."
    ],
    "metadata": {
     "collapsed": false,
