--- a/examples/real_world_examples/kaggle/Harmful Brain Activity Classification.ipynb
+++ b/examples/real_world_examples/kaggle/Harmful Brain Activity Classification.ipynb
@@ -25,7 +25,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "from fedot_ind.api.main import FedotIndustrial\n",
+    "from fedot_ind.api.main import Framework\n",
     "from fedot_ind.api.utils.path_lib import PROJECT_PATH\n",
     "from scipy.signal import butter, lfilter\n",
     "\n",
@@ -286,7 +286,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "model = FedotIndustrial(**experiment_setup)\n",
+    "model = Framework(**experiment_setup)\n",
     "model.fit(input_data_train)"
    ],
    "metadata": {
