--- a/examples/real_world_examples/industrial_examples/enviroment_monitoring/ts_regression/air_quality_madrid.ipynb
+++ b/examples/real_world_examples/industrial_examples/enviroment_monitoring/ts_regression/air_quality_madrid.ipynb
@@ -71,7 +71,7 @@
     }
    },
    "source": [
-    "Now we must download the dataset. It could be done by using `DataReader` class that implemented as attribute of `FedotIndustrial` class. This class firstly tries to read the data from local project folder `data_path` and then if it is not possible, it downloads the data from the UCR/UEA archive. The data will be saved in the `data` folder."
+    "Now we must download the dataset. It could be done by using `DataReader` class that implemented as attribute of `Framework` class. This class firstly tries to read the data from local project folder `data_path` and then if it is not possible, it downloads the data from the UCR/UEA archive. The data will be saved in the `data` folder."
    ]
   },
   {
@@ -211,7 +211,7 @@
    "source": [
     "Next steps are quite straightforward. We need to fit the model and then predict the values for the test data just like for any other model in sklearn.\n",
     "\n",
-    "At the `fit` stage FedotIndustrial will transform initial time series data into features dataframe and will train regression model."
+    "At the `fit` stage Framework will transform initial time series data into features dataframe and will train regression model."
    ],
    "metadata": {
     "collapsed": false,
